# shotdetection

./: .gitignore  CMakeLists.txt  README.md
